[package]
name = "icedaudiocubes"
version.workspace = true
edition.workspace = true

[workspace]
members = ["xtask", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "audiocubes"
path = "src/main.rs"

[dependencies]
nih_plug = { path = "C:/D/robbert-vdh-nih-plug", features = ["standalone"] }
nih_plug_iced = { path = "C:/D/robbert-vdh-nih-plug/nih_plug_iced" }
rand = "0.9.2"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "a53fa91e0ddf374bbeb66d5e831b79127ed47a9d", features = ["tokio", "canvas"] }