[package]
name = "januarysound"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
clap = "4.5.55"
clap-sys = "0.5.0"
anyhow = "1.0.100"
log = "0.4.22"
env_logger = "0.11.5"
