[package]
name = "marchlit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
env_logger = "0.11.9"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
log = "0.4.29"
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
turso = "0.5.1"
