[package]
name = "fjallaxumkvmarch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
env_logger = "0.11.9"
fjall = "3.0.3"
http-body-util = "0.1.3"
log = "0.4.29"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
