[package]
name = "rustsync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustsync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
ollama-rs = "0.2"
serde_json = "1.0"
pgvector = { version = "0.4", features = ["postgres"] }