[package]
name = "goldsilverinit"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.38", features = ["bundled", "ttf"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[profile.dev]
panic = "abort"
lto = false
debug = true
opt-level = 0
overflow-checks = true
debug-assertions = true
codegen-units = 1
incremental = false

[profile.dev.package."*"]
overflow-checks = true

# release ???
