[package]
name = "twentysixseek"
version = "0.1.0"
edition = "2024"

[dependencies]
base64-url = "3.0.2"
chrono = "0.4.43"
rand = "0.10.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.9.10"
walkdir = "2.5.0"
[dependencies.uuid]
version = "1.19.0"
features = [
  "v4",
]
